--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Quote Card</title>
 </head>
 
@@ -10,8 +11,8 @@
     <main class="main">
         <div class="background-img"></div>
         <article class="quote-container">
-            <q id="quote" class="quote-text">The Internet is the first thing that humanity has built that humanity doesn't understand, the largest experiment in anarchy that we have ever had.</q>
-            <p id="author" class="author-text">Eric Schmidt</p>
+            <q id="quote" class="quote-text">If you only read the books that everyone else is reading, you can only think what everyone else is thinking.</q>
+            <p id="author" class="author-text">Haruki Murakami, Norwegian Wood</p>
         </article>
     </main>
     <script src="./js/index.js"></script>
